0.2.6
 - docs: add hint for windows users how to run the 3D examples
 - fix: make phase unwrapping deterministic
 - ref: use `empty_aligned` instead of deprecated `n_byte_align_empty`
0.2.5
 - fix: reconstruction volume rotated by 180° due to floating point
   inaccuracies (affects `backpropagate_3d_tilted`).
0.2.4
 - maintenance release
0.2.3
 - enh: employ slice-wise padding to reduce the memory usage (and
   possibly the computation time) of
   - basic 3D backpropagation algorithm (#7)
   - 3D backpropagation with a tilted axis of rotation (#9)
 - ref: replace asserts with raises (#8)
 - ref: multiprocessing-based rotation does not anymore require
   a variable (_shared_array) at the top level of the module; As a
   result, multiprocessing-rotation should now also work on Windows.
0.2.2
 - docs: minor update and add changelog
0.2.1
 - fix: Allow sinogram data type other than complex128
 - docs: Add example with experimental data (#3)
 - ci: automated deployment with travis-ci
0.2.0
 - BREAKING CHANGES:
   - Dropped support for Python 2
   - Renamed `sum_2d` to `integrate_2d`
 - Refactoring (#4, #5):
   - Moved each reconstruction algorithm to a separate file
   - Modified code to comply with PEP8
   - Moved long doc strings from source to docs directory
   - Migrate from unwrap to scikit-image
   - Cleaned up example scripts
 - Bugfixes:
   - Mistake in "negative-modulo" method for determination of
     2PI sinogram phase offsets
0.1.8
 - Updated documentation
 - Cleaned up examples
0.1.7
 - Move documentation from GitHub to readthedocs.io
 - Add universal wheel on PyPI
 - Update tests on travis with new versions of NumPy
0.1.6
 - Bugfixes:
  - size of reconstruction volume in z too large for cases where
    the y-size is larger than the x-size of the sinogram images
  - `backpropagate_3d_tilted` used wrong shape of projections
  - 3D backpropagation methods did not use power-of-two padding size
0.1.5
 - Code optimization (speed, memory) with numexpr