@@ -1,6 +1,8 @@
 0.2.6
  - docs: add hint for windows users how to run the 3D examples
  - fix: make phase unwrapping deterministic
+ - tests: remove one test of the 2D Fourier mapping algorithm due to
+   instabilities in using scipy.interpolate.griddata
  - ref: use `empty_aligned` instead of deprecated `n_byte_align_empty`
 0.2.5
  - fix: reconstruction volume rotated by 180° due to floating point
